# schule

./: .emacs  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  TEST.PDF.DATA  Vertretung.cpp  a.out  app.lisp  build-docker.sh  database.db  diff.ros  diff.sh  emacs.sh  file.diff  index.html  lisp-wiki.asd  lisp-wiki.lisp  memory  nginx.conf  pdf.lisp  result.js  run-docker.sh  schule-test.asd  schule.asd  setup.sh  spickipedia.db  spickipedia.db-journal  test.c  test.dot  test.sql  track.json  visual-diff.html  visual-diff.js  visual-editor.html  watch.sh  (+1 more)
.circleci/: config.yml
js/: categories.lisp  create.lisp  editor-lib.lisp  editor.lisp  fetch.lisp  file-upload.lisp  get-url-parameter.lisp  history.lisp  image-viewer.lisp  index.lisp  login.lisp  logout.lisp  math.lisp  quiz.lisp  read-cookie.lisp  show-tab.lisp  state-machine.lisp  sw.lisp  utils.lisp
mw-diff-sexp/: diff-sexp.lisp
rust-web-push/: setup.sh
rust-web-push-test/: Cargo.toml  setup.sh
rust-web-push-test/html/: index.html  sw.js
rust-web-push-test/src/: lib.rs  main.rs
spickipedia/: .gitignore  README.markdown  app.lisp  bootstrap-theme.scss  package-lock.json  package.json  schema.sql  spickipedia-test.asd  spickipedia.asd  test.lisp
src/: argon2.lisp  config.lisp  database.lisp  db.lisp  default-handler.lisp  fix-code.lisp  index.lisp  libc.lisp  lisp-wiki.lisp  main.lisp  package.lisp  parenscript.lisp  pdf.lisp  permissions.lisp  route.lisp  sanitize.lisp  schedule.lisp  session.lisp  settings.lisp  show-dependencies.lisp  (+5 more)
(+192 files in other folders)
