[package]
name = "rust-web-push-test"
version = "0.1.0"
authors = ["mohe2015 <Moritz.Hedtke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-push = { git = "https://github.com/mohe2015/rust-web-push" }
tokio = "*"
base64 = "*"
futures = "*"
