[package]
name = "rust-web-push-test"
version = "0.1.0"
authors = ["mohe2015 <Moritz.Hedtke@t-online.de>"]
edition = "2018"

[lib]
name = "embed"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-push = "*"
tokio = "*"
futures = "*"
